# weather_test

./: .gitignore  CMakeLists.txt  README.md  build.py  clean.py
rc/: app.desktop  resources.aps  resources.rc  settings.json
src/: main.cpp
